--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Devise3</title>
+    <title>Happy Share</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -23,20 +23,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Soupcloud</a>
+          <a class="navbar-brand" href="/">Happy Share</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/ideas">Ideas</a></li>
             <li><a href="/profile">Profile</a></li>
-            <li><a href="projects_path"></a></li>
+            <li><a href="/projects">Project</a></li>
+            <!--<li><a href="/identities">Identities</a></li>-->
           </ul>
           <p class="navbar-text pull-right">
             <% if user_signed_in? %>
                 Logged in as <strong><%= current_user.email %></strong>.
-                <%= image_tag current_user.identities.order(:updated_at).last.image, size: 30 %>
                 <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
                 <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+                <%=	 link_to "Identites", user_identities_path(current_user),:class => 'navbar-link' %>
             <% else %>
                 <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
                 <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>|
@@ -57,9 +58,7 @@
     <% end %>
     <%= yield %>
     <footer>
-      <div class="container">
-        Rails Girls 2016
-      </div>
+
     </footer>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.js"></script>
   </div>
