--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -2,5 +2,7 @@
 
 <%= @invoice.name %>
 <%= @invoice.endOfFortnight %>
+<%=  @invoice.user_id %>
+<%=  %>
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
 <%= link_to 'Back', invoices_path %>
