fix update project

--- a/app/views/projects/create.js.erb
+++ b/app/views/projects/create.js.erb
@@ -1,4 +1,4 @@
-$('.book-list').prepend('<%=j render  @project.messages %>');
+$('.book-list').prepend('<%=j render  @project.name %>');
 $("#show-form").trigger('reset');
 $(".message-form").slideUp();
 
