--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,8 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<%= @invoice.name %>
-<%= @invoice.endOfFortnight %>
-<%=  @invoice.user_id %>
-<%=  %>
-<%= link_to 'Edit', edit_invoice_path(@invoice) %> |
-<%= link_to 'Back', invoices_path %>
+<div> <%= @invoice.name %>
+  end of fortnight<%= @invoice.endOfFortnight %>
+  username<%= @invoice.user.username %>
+  <table class="table-striped">
+    <tr>
+      <th>Project id:</th>
+      <th>Hourly Rate:</th>
+      <th> Number Of Hours</th>
+    </tr>
+  <% @invoice.invoice_rows.each do |i| %>
+
+        <tr>
+          <td><%= i.project_id %></td>
+          <td><%= i.rate %></td>
+          <td><%= i.hours %></td>
+  <% end %>
+  </tr>
+  </table>
+  <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
+  <%= link_to 'Back', invoices_path %>
+</div>
