added fields to invoice form added customer scaffold changed schema to store invoice details as they are at time of creation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 body {
+;
     padding-top: 100px;
     background-color: #c0d1d0;
 }
@@ -30,4 +31,10 @@ table, td, th ,tr,td{
 
 th {
     border-bottom: 1px solid #DDD;
+}
+/*div {*/
+    /*outline: 2px solid #ccc;*/
+/*}*/
+.outline {
+    outline: 2px solid #ccc;
 }
