--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -6,13 +6,13 @@
 /* ==========================================================================
    Common Styles
    ========================================================================== */
+hr.style2 {
+    border-top: 3px double #8c8b8b;
+}
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
   font-size: 13px;
-  line-height: 24px;
-  overflow-x: hidden;
     background-color: #ede6e8;
   /* fixing the overflow duting animation */
 }
@@ -25,21 +25,16 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
   font-family: 'Lato', sans-serif;
-  font-weight: 700;
 }
 h1 {
   font-size: 3em;
 }
 h3 {
-  font-size: 1.6em;
-  line-height: 1.4em;
 }
 p {
   font-size: 13px;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  line-height: 24px;
-  font-weight: 400;
 }
 a {
   color: #444;
