--- a/app/assets/stylesheets/invoices.scss
+++ b/app/assets/stylesheets/invoices.scss
@@ -6,7 +6,7 @@
 //}
 
 .new-invoice {
-  display: none;
+ //display: none;
 }
 li.shadow {
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
