--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,11 @@
  *= require_tree .
  *= require_self
  */
-body {
-;
-    padding-top: 100px;
-    background-color: #c0d1d0;
+
+
+body, html, .container-fluid, .sidebar, .body {
+    height: 100%;
+    min-height: 100%;
 }
 
 footer {
@@ -27,8 +28,11 @@ footer {
 table, td, th ,tr,td{
     vertical-align: center;
     border: none;
-}
 
+}
+.grey_backgound {
+    background-color: #f0f0f0;
+}
 th {
     border-bottom: 1px solid #DDD;
 }
@@ -37,4 +41,16 @@ th {
 /*}*/
 .outline {
     outline: 2px solid #ccc;
+}
+
+.sidebar{
+    background-color: #f0f0f0;
+    width:15%;
+    float:left;
+    height:100%;
+
+}
+#container{
+    width:100%;
+    height:100%;
 }
