--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -41,11 +41,25 @@
           <div class="col-sm-3">
             <%= select_tag :customer, options_from_collection_for_select(Customer.all.order(:id),:id, :first_name,:last_name),prompt: "select Customer" %>
             <label>Bill To: </label><br>
-            <label>full name</label><br>
-            <label>ABN: 54757877</label><br>
-            <label> 1 street</label><br>
-            <label>town state</label><br>
-            <label>country 4000</label><br>
+            <%= f.text_field :customer_first_name, value: @customer.first_name %>
+            <%= f.text_field :customer_last_name, value: @customer.last_name %>
+
+            <%= f.label :customer_abn %>
+            <%= f.text_field :customer_abn, value: @customer.abn %>
+            <label>street No</label><br>
+            <%= f.label :customer_street_no %>
+            <%= f.text_field :customer_street_no, value: @customer.street_no %>
+            <label for="">Street</label>
+            <%= f.text_field :customer_street %>
+            <%= f.text_field :customer_street, value: @customer.street %>
+            <label>town</label><br>
+            <%= f.text_field :customer_city, value: @customer.city %>
+            <label for="">state</label>
+            <%= f.text_field :customer_state, value: @customer.state %>
+            <label>PostCode</label><br>
+            <%= f.text_field :customer_post_code, value: @customer.post_code %>
+            <label for="">Contry</label>
+            <%= f.text_field :customer_country, value: @customer.country %>
           </div>
           <div class="col-sm-3">
             <p>col3</p>
