--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,49 +11,64 @@
     <!---->
     <%= stylesheet_link_tag 'font-awesome.min', media: 'all'  %>
 
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Loggin Tracker</a>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><%= link_to 'My Invoices', invoices_path(current_user)%></li>
-              <li><%= link_to 'My Projects', projects_path%></li>
-              <li><%= link_to 'My Customers', customers_path%></li>
-              <li><%= link_to 'My Profile', users_path%></li>
-              <!--<li><a href="/identities">Identities</a></li>-->
-            </ul>
-            <p class="navbar-text pull-right">
-              <% if user_signed_in? %>
-                  Logged in as <strong><%= current_user.email %></strong>.
-                  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-                  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> |
-                  <%=	 link_to "Identities", user_identities_path(current_user),:class => 'navbar-link' %>
-              <% else %>
-                  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-                  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>|
 
-
-              <% end %>
-          </div>
-        </div>
-      </nav>
-      </nav>
 
   </head>
-  <body>
+<body>
 
 
+<div class="container-fluid">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Loggin Tracker</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <p class="navbar-text pull-right">
+          <% if user_signed_in? %>
+              Logged in as <strong><%= current_user.email %></strong>.
+              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> |
+              <%=	 link_to "Identities", user_identities_path(current_user),:class => 'navbar-link' %>
+          <% else %>
+              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+              <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>|
+
+
+          <% end %>
+          </div>
+    </div>
+  </nav>
+
+  <div id="container">
+    <div  class="sidebar">
+      <ul >
+
+        <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
+        <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
+        <li><%= link_to 'My Projects', projects_path %></li>
+        <li><%= link_to 'My Customers', customers_path %></li>
+        <li><%= link_to 'My Profile', users_path%></li>
+
+      </ul>
+    </div>
+
+  <div class="col-sm-6">
     <%= yield %>
+  </div>
+
+</div>
+
+</div>
 
   </body>   <!-- Copyright Start  -->
-    <!-- Footer Section Start -->
+
+
 
 </html>
