--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,7 @@ th {
     width:100%;
     height:100%;
 }
-h1{
-    padding: 0 ;
-    margin: 0;
+.navbar{
+    margin-bottom: 0px !important;
+    position: absolute;
 }
