--- a/app/views/time_sheets/show.html.erb
+++ b/app/views/time_sheets/show.html.erb
@@ -4,7 +4,7 @@
   <strong>Time period:</strong>
   <%= @time_sheet.time_period %>
 </p>
-
+<h1><%= @time_sheet.id %></h1>
 <p>
   <strong>User:</strong>
   <%= @time_sheet.user.first_name %>
@@ -12,7 +12,7 @@
 <table class="outline" style="width: 100%">
   <tr class="grey_backgound">
     <th>id</th>
-    <th>date</th>
+    <th>description</th>
     <th>hours</th>
     <th>project</th>
     <th></th>
@@ -20,13 +20,14 @@
   <% @time_sheet.works.each do |w| %>
   <tr>
     <td><%= w.id %></td>
-    <td><%= w.date %></td>
+    <td><%= w.description %></td>
     <td><%= w.hour %></td>
     <td><%= w.project_id %></td>
-  <td><%=link_to 'delete', work_path( w.id), data: {confirm: 'Are you sure'}, method: :delete %></td>
+    <td><%=link_to 'delete', work_path( w.id), data: {confirm: 'Are you sure'}, method: :delete %></td>
 
   </tr>
-      <% end %>
+  <% end %>
 </table>
 <%= link_to 'Edit', edit_time_sheet_path(@time_sheet) %> |
 <%= link_to 'Back', time_sheets_path %>
+
