add total for this weeks time sheet

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,13 +22,9 @@
                 <% w.hour  %>
             <% end %></tr>
             </tr>
-<%= time.works.sum(:hour) %>
+
   <% end %>
-    <td></td><td></td><td><% %>
-
-
-
-  </td>
+    <td></td><td></td><td>total <%= @sum %>  </td>
 
     <tr>
     </tr>
