--- a/app/views/projects/show.xls.erb
+++ b/app/views/projects/show.xls.erb
@@ -12,9 +12,8 @@
         <td>
 
           <% time.works.each do |w| %>
-              <%= w.hour %></td>
-              <% w.hour %>
-          <% end %></tr>
+              <%= w.hour %>
+          <% end %></td></tr>
       </tr>
 
   <% end %>
