--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blank</title>
+    <title>Time Sheet</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Loggin Tracker</a>
+        <a class="navbar-brand" href="/">Time Sheet</a>
       </div>
       <div class="collapse navbar-collapse">
         <p class="navbar-text pull-right">
@@ -59,7 +59,7 @@
       </ul>
     </div>
 
-  <div class="col-sm-6">
+  <div class="col-sm-10">
     <%= yield %>
   </div>
 
