--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,7 +7,13 @@
   <p> Time sheet for week ending  <%= Time.now.end_of_week %></p>
   <div id="target-for-change" class="target-for-change"></div>
 
-<p>total hours for project <%= Work.total_hours_for_project(@project.id) %></p>
+  <%= form_tag project_path(@project),method: :get  do %>
+    <%= date_field_tag :start_date, params[:start_date] %>
+      <%= date_field_tag :end_date, params[:end_date] %>
+      <%= submit_tag "search" %>
+      <% end %>
+
+  <p>total hours for project <%= Work.total_hours_for_project(@project.id) %></p>
 
   <%= link_to "CSV", project_path(@project, format: "csv") %>
   <%= link_to "Excel", project_path(@project, format: "xls") %>
