--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,24 +45,66 @@ th {
     outline: 2px solid #ccc;
 }
 
-.sidebar{
+.sidebar-background{
     background-color: #f0f0f0;
-    width:15%;
-    float:left;
-    height:100%;
+    position:absolute;
+    top:0; bottom:0; left:0;
+    width:50px;
+}
+#sidebar-wrapper {
+    z-index: 1;
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    overflow-y: hidden;
+    background: lightgrey;
+    opacity: 0.9;
+}
 
-}
-#container{
-    width:100%;
-    height:100%;
-}
-.navbar{
-    margin-bottom: 0px !important;
+#page-content-wrapper {
+    width: 100%;
     position: absolute;
-}
-.has-time-sheet {
-    background:  url('redcross.png');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    padding-left: 260px;
 
+}
+
+#wrapper.menuDisplayed #sidebar-wrapper {
+    width: 0px;
+
+}
+#wrapper.menuDisplayed #page-content-wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+
+}
+
+.sidebar-nav {
+    padding: 0;
+    list-style: none;
+
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: gray;
+
+}
+
+.sidebar-nav li a:hover {
+background: #16AO85;
+
+}
+
+.navbar {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 0 !important;
+    border: 1px solid transparent;
 }
