--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Time Sheet</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Time Sheet</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.css">
-    <!---->
-    <%= stylesheet_link_tag 'font-awesome.min', media: 'all'  %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.css">
+  <!---->
+  <%= stylesheet_link_tag 'font-awesome.min', media: 'all' %>
 
 
-
-  </head>
+</head>
 <body>
 
 
-<div class="container-fluid">
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
+
     <div class="container">
+      <a href="#" class="btn btn-success pull-left" id="menu-toggle">Toggle Menu</a>
+
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -27,6 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <a class="navbar-brand" href="/">Time Sheet</a>
       </div>
       <div class="collapse navbar-collapse">
@@ -34,41 +36,43 @@
           <% if user_signed_in? %>
               Logged in as <strong><%= current_user.email %></strong>.
               <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> |
-              <%=	 link_to "Identities", user_identities_path(current_user),:class => 'navbar-link' %>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' %> |
+              <%= link_to "Identities", user_identities_path(current_user), :class => 'navbar-link' %>
           <% else %>
-              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-              <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>|
+              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' %> |
+              <%= link_to "Login", new_user_session_path, :class => 'navbar-link' %>|
 
 
           <% end %>
           </div>
     </div>
   </nav>
+  <div id="wrapper">
 
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
 
-    <div  class="sidebar">
-      <ul >
-
-        <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
-        <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
-        <li><%= link_to 'My Projects', projects_path %></li>
-        <li><%= link_to 'My Customers', customers_path %></li>
-        <li><%= link_to 'My Profile', users_path%></li>
-
-      </ul>
+          <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
+          <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
+          <li><%= link_to 'My Projects', projects_path %></li>
+          <li><%= link_to 'My Customers', customers_path %></li>
+          <li><%= link_to 'My Profile', users_path %></li>
+        </ul>
+      </div>
+  <div id="page-content-wrapper">
+    <div class="container-fluid "   >
+      <%= yield %>
     </div>
-
-  <div class="col-sm-10">
-    <%= yield %>
+    </div>
   </div>
 
-</div>
+</body>   <!-- Copyright Start  -->
 
-</div>
-
-  </body>   <!-- Copyright Start  -->
-
-
+<script>
+    $("#menu-toggle").click( function (e){
+        e.preventDefault();
+        $("#wrapper").toggleClass("menuDisplayed");
+    });
+</script>
 
 </html>
