--- a/app/views/time_sheets/index.html.erb
+++ b/app/views/time_sheets/index.html.erb
@@ -5,7 +5,7 @@
 <%=month_calendar  do |date| %>
 
  <%= date.strftime("%d %a %b ") %>
-    <% if TimeSheet.has_time_sheet(date) %>
+    <% if TimeSheet.has_time_sheet(date,current_user.id) %>
         <div class="has-time-sheet">
 
         </div>
