--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
 
-    <div class="container">
+    <div class="container-fluid">
       <a href="#" class="btn btn-success pull-left" id="menu-toggle">Toggle Menu</a>
 
       <div class="navbar-header">
