--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,37 +1,44 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h1>    <%= @project.name.capitalize %>
-  </h1><%= Time.now.beginning_of_week %>
+  <h1>    <%= @project.name.capitalize %></h1>
+  <h2>Total hours for project <%= Work.total_hours_for_project(@project.id) %></h2>
+  <%= form_tag project_path(@project), method: :get do %>
+      <div class="row padding_bottom">
+        <div class="col-xs-2">
+          <%= submit_tag('CSV', :value => 'csv', :name => 'format', :class => "btn btn-default") %>
+          <%= submit_tag('Excel', :value => 'xls', :name => 'format', class: "btn btn-default") %>
+          <%= submit_tag('Invoice', :value => 'pdf', :name => 'format', class: "btn btn-default") %>
 
-  <p> Time sheet for week ending  <%= Time.now.end_of_week %></p>
-  <div id="target-for-change" class="target-for-change"></div>
-
-  <%= form_tag project_path(@project),method: :get  do %>
-    <%= date_field_tag :start_date, params[:start_date] %>
-      <%= date_field_tag :end_date, params[:end_date] %>
-      <%= submit_tag "search" , class: "btn btn-default" %>
-
-
-  <p>total hours for project <%= Work.total_hours_for_project(@project.id) %></p>
-  <%= submit_tag( 'CSV', :value => 'csv', :name => 'format', :class =>"btn btn-default" ) %>
-  <%= submit_tag( 'Excel', :value => 'xls', :name => 'format', class: "btn btn-default" ) %>
-
-
-  <div id="">
-    <%= render 'shared/time_sheets_for_week' %>
-  </div>
-
-
-  <h1>Hours By Day</h1>
-  <%= column_chart @column_chart %>
-
-  <h1>Users Hours For This Project</h1>
-  <%= pie_chart hours_by_user_projects_path(@project) %>
+        </div>
+        <div class="col-xs-2">
+          <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
+        </div>
+        <div class="col-xs-2">
+          <%= date_field_tag :end_date, params[:end_date], class: "form-control" %>
+        </div>
+        <div class="col-xs-2">
+          <%= submit_tag "search", class: "btn btn-default form-control" %>
+        </div>
+      </div>
 
 
-  <%= link_to 'Edit', edit_project_path(@project) %> |
-  <%= link_to 'Back', projects_path %>
+
+
+      <div id="">
+        <%= render 'shared/time_sheets_for_week' %>
+      </div>
+
+
+      <h1>Hours By Day</h1>
+      <%= column_chart @column_chart %>
+
+      <h1>Users Hours For This Project</h1>
+      <%= pie_chart hours_by_user_projects_path(@project) %>
+
+
+      <%= link_to 'Edit', edit_project_path(@project) %> |
+      <%= link_to 'Back', projects_path %>
 
   <% end %>
 </div>
