--- a/app/views/shared/_time_sheets_for_week.html.erb
+++ b/app/views/shared/_time_sheets_for_week.html.erb
@@ -1,21 +1,24 @@
-<table class="outline" style="width: 100%">
-  <tr class=" grey_backgound">
-    <th>UserName</th>
-    <th>Date worked</th>
-    <th>Hours</th>
-  </tr>
-  <% @time.each do |time| %>
-      <tr>
+<div class="table-responsive">
+  <table class="outline table-striped table-hover">
+    <tr class=" grey_backgound">
+      <th>UserName</th>
+      <th>Date worked</th>
+      <th>Hours</th>
+    </tr>
+    <% @time.each do |time| %>
 
-        <td><%= link_to "#{time.user.full_name}", time_sheet_path(time)%></td>
+        <tr>
+        <span>
+        <td><%= link_to "#{time.user.full_name}", time_sheet_path(time) %></td>
         <td><%= time.time_period %></td>
-        <td>  <%= time.hour %> </td>   </tr>
-  <% end %>
-  <td></td>
-  <td></td>
-  <td>total <%= 	 @project.sum_time_sheet(@time) %>
-  </td>
+        <td>  <%= time.hour %> </td>  </span></tr>
+    <% end %>
+    <td></td>
+    <td></td>
+    <td>total <%= @project.sum_time_sheet(@time) %>
+    </td>
 
-  <tr>
-  </tr>
-</table>
+    <tr>
+    </tr>
+  </table>
+</div>
