--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,27 +1,49 @@
-<%= form_for(@project) do |f| %>
-  <% if @project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<div class="container">
+  <div class="form-horizontal">
+    <%= form_for(@project) do |f| %>
+        <% if @project.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
-      <ul>
-      <% @project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+              <ul>
+                <% @project.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-1">
+              <%= f.label :name %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :name, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+
+          <div class="row">
+            <div class="col-sm-1">
+              <%= f.label :customer, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.select(:customer_id, Customer.all.collect {|c| [c.full_name, c.id]},{},class: 'btn btn-default') %>
+            </div>
+          </div>
+        </div>
+          <div class="row">
+            <div class="form-group">
+            <div class="col-sm-offset-1 col-sm-7 ">
+
+                <%= f.submit class: "btn btn-default pull-right" %>
+
+              </div>
+            </div>
+          </div>
+        </div>
+    <% end %>
   </div>
-
-    <div class="field">
-    <%= f.label :customer %>
-    <%= f.select(:customer_id,  Customer.all.collect {|c| [c.full_name, c.id ]}) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
