--- a/app/views/shared/_time_sheets_for_week.html.erb
+++ b/app/views/shared/_time_sheets_for_week.html.erb
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="outline table-striped table-hover">
+  <table class="table outline table-striped table-hover">
     <tr class=" grey_backgound">
       <th>UserName</th>
       <th>Date worked</th>
