--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,98 +16,126 @@
 @import "bootstrap";
 @import "bootstrap-sprockets";
 
-
 body, html, .container-fluid, .sidebar, .body {
-    height: 100%;
-    min-height: 100%;
-
+  height: 100%;
+  min-height: 100%;
 }
 
 footer {
-    margin-top: 100px;
-    padding:0px;
-}
-table{
-    width: 100%;
-}
-table, td, th ,tr,td{
-    vertical-align: center;
-    border: none;
-}
-.grey_backgound {
-    background-color: #f0f0f0;
-}
-th {
-    border-bottom: 1px solid #DDD;
-}
-/*div {*/
-    /*outline: 2px solid #ccc;*/
-/*}*/
-.outline {
-    outline: 2px solid #ccc;
+  margin-top: 100px;
+  padding: 0px;
 }
 
-.sidebar-background{
-    background-color: #f0f0f0;
-    position:absolute;
-    top:0; bottom:0; left:0;
-    width:50px;
+table {
+  width: 100%;
 }
+
+table, td, th, tr, td {
+  vertical-align: center;
+  border: none;
+}
+
+.grey_backgound {
+  background-color: #f0f0f0;
+}
+
+th {
+  border-bottom: 1px solid #DDD;
+}
+
+/*div {*/
+/*outline: 2px solid #ccc;*/
+/*}*/
+.outline {
+  outline: 2px solid #ccc;
+}
+
+.sidebar-background {
+  background-color: #f0f0f0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 50px;
+}
+
 #sidebar-wrapper {
-    z-index: 1;
-    position: fixed;
-    width: 250px;
-    height: 100%;
-    overflow-y: hidden;
-    background: lightgrey;
-    opacity: 0.9;
+  z-index: 1;
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  overflow-y: hidden;
+  background: lightgrey;
+  opacity: 0.9;
+  padding-top: 45px;
+
 }
 
 #page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding-left: 260px;
-    padding-right: 10px;
+  width: 100%;
+  position: absolute;
+  padding-left: 260px;
+  padding-right: 10px;
+  padding-top: 45px;
 
 }
 
 #wrapper.menuDisplayed #sidebar-wrapper {
-    width: 0px;
+  width: 0px;
 
 }
+
 #wrapper.menuDisplayed #page-content-wrapper {
-    padding-left: 10px;
-    padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 
 }
 
 .sidebar-nav {
-    padding: 0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+  text-indent: 20px;
+  line-height: 40px;
 
 }
 
 .sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: gray;
+  display: block;
+  text-decoration: none;
+  color: gray;
 
 }
 
 .sidebar-nav li a:hover {
-background: #16AO85;
+  background: #16AO85;
 
 }
 
 .navbar {
-    position: relative;
-    min-height: 50px;
-    margin-bottom: 0 !important;
-    border: 1px solid transparent;
+  position: fixed;
+  min-height: 40px;
+  max-height: 50px;
+  margin-bottom: 0 !important;
+  border: 1px solid transparent;
+}
+
+li.shadow {
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 19px !important;
+}
+
+li.darkShadow {
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: grey;;
+}
+
+li.background {
+  //background-color: grey;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.6), 6px 12px 30px 0 rgba(0, 0, 0, 0.19);
+  //font-size: 150%;
+
 }
