--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,62 +1,132 @@
-<%= form_for(customer) do |f| %>
-  <% if customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
-      <ul>
-      <% customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="container">
+  <div class="form-horizontal">
+    <%= form_for(@customer, remote: true) do |f| %>
+        <% if @customer.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+              <ul>
+                <% @customer.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
+
+
+
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :first_name, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :first_name, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :last_name, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :last_name, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :street_no, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :street_no, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :street, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :street, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :city, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :city, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :state, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :state, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :country, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :country, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :post_code, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :post_code, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :abn, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :abn, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-7 ">
+
+              <%= f.submit class: "btn btn-default pull-right" %>
+
+            </div>
+          </div>
+        </div>
+        </div>
+    <% end %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :street_no %>
-    <%= f.text_field :street_no %>
-  </div>
-
-  <div class="field">
-    <%= f.label :street %>
-    <%= f.text_field :street %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %>
-    <%= f.text_field :country %>
-  </div>
-
-  <div class="field">
-    <%= f.label :post_code %>
-    <%= f.text_field :post_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :abn %>
-    <%= f.text_field :abn %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
