--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,43 +1,18 @@
 <p id="notice"><%= notice %></p>
-
+<div class='pull-right '  >
+  <button  id="new-project" class="btn btn-primary">New Customer</button>
+</div>
 <h1>Customers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Street no</th>
-      <th>Street</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Country</th>
-      <th>Post code</th>
-      <th>Abn</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div>
+  <NewProject id="NewProject" class="new-project">
+    <%= render 'form' %>
+  </NewProject>
 
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= customer.first_name %></td>
-        <td><%= customer.last_name %></td>
-        <td><%= customer.street_no %></td>
-        <td><%= customer.street %></td>
-        <td><%= customer.city %></td>
-        <td><%= customer.state %></td>
-        <td><%= customer.country %></td>
-        <td><%= customer.post_code %></td>
-        <td><%= customer.abn %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+</div>
+<%= will_paginate @customers %>
+<ul>
+  <%= render @customers %>
+</ul>
+<%= will_paginate @customers %>
 <br>
-
-<%= link_to 'New Customer', new_customer_path %>
