--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,21 @@
 <body>
 
 
-  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
     <div class="container-fluid">
-      <a href="#" class="btn btn-success pull-left" id="menu-toggle">Toggle Menu</a>
 
       <div class="navbar-header">
+
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
 
-        <a class="navbar-brand" href="/">Time Sheet</a>
+        <a class="navbar-brand" href="/"> Time Sheet</a>
       </div>
       <div class="collapse navbar-collapse">
         <p class="navbar-text pull-right">
@@ -54,7 +55,7 @@
           <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
           <li><%= link_to 'My Projects', projects_path %></li>
           <li><%= link_to 'My Customers', customers_path %></li>
-          <li><%= link_to 'My Profile', users_path %></li>
+          <li><%= link_to 'My Users', users_path %></li>
         </ul>
       </div>
   <div id="page-content-wrapper">
