--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="form-horizontal">
-    <%= form_for(@project) do |f| %>
+    <%= form_for(@project, remote: true) do |f| %>
         <% if @project.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -16,7 +16,7 @@
         <div class="form-group">
           <div class="row">
             <div class="col-sm-1">
-              <%= f.label :name %>
+              <%= f.label :name, class: "control-label"  %>
             </div>
             <div class=" col-sm-7">
               <%= f.text_field :name, class: "form-control" %>
