--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,72 +1,166 @@
-<%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="container">
+  <div class="form-horizontal">
+  <%= form_for(@user, remote: true) do |f| %>
+      <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
-      </ul>
-    </div>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-2">
+            <%= f.label :email, class: "control-label" %>
+          </div>
+          <div class=" col-sm-7">
+            <%= f.text_field :email, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-2">
+            <%= f.label :username, class: "control-label" %>
+          </div>
+          <div class=" col-sm-7">
+            <%= f.text_field :username, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-2">
+            <%= f.label :first_name, class: "control-label" %>
+          </div>
+          <div class=" col-sm-7">
+            <%= f.text_field :first_name, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-2">
+            <%= f.label :last_name, class: "control-label" %>
+          </div>
+          <div class=" col-sm-7">
+            <%= f.text_field :last_name, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :street_no, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :street_no, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :street, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :street, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :city, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :city, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :state, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :state, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :country, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :country, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :post_code, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :post_code, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :abn, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :abn, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.password_field :current_password, autocomplete: "off" %>
+        </div>
+
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-7 ">
+
+              <%= f.submit class: "btn btn-default pull-right" %>
+
+            </div>
+          </div>
+        </div>
+      </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :street_no %>
-    <%= f.text_field :street_no %>
-  </div>
-
-  <div class="field">
-    <%= f.label :street %>
-    <%= f.text_field :street %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %>
-    <%= f.text_field :country %>
-  </div>
-
-  <div class="field">
-    <%= f.label :post_code %>
-    <%= f.text_field :post_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :abn %>
-    <%= f.text_field :abn %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
