--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,6 +53,9 @@
 <p>
   <strong>Abn:</strong>
   <%= @user.abn %>
+</p><p>
+  <strong>Rate:</strong>
+  <%= @user.rate %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
