--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,19 +1,4 @@
 <p id="notice"><%= notice %></p>
-
-<div class="form-group"> <%= @invoice.name %>
-  <table class="table-striped">
-    <tr>
-      <th>Project id:</th>
-      <th>Hourly Rate:</th>
-      <th> Number Of Hours</th>
-    </tr>
-    end of fortnight<%= @invoice.endOfFortnight %>
-    username<%= @invoice.user.full_name %>
-
-    <html>
-    <head>
-
-
     <body class="pdf-background">
     <div class="alwaysbreak">
       <table style="width: 100%; ">
@@ -24,6 +9,7 @@
             <div align="right" style="padding: 10">
               <h3>For time period</h3>
               <%= @invoice.invoice_date.strftime("%A %b %d") %>
+              <h4>Invoice number#  <%= @invoice.id %></h4>
             </div>
           </td>
         </tr>
@@ -48,20 +34,25 @@
                 <th>Date worked</th>
                 <th>Hours</th>
                 <th>Rate</th>
+                <th>Sub Total</th>
+
 
               </tr>
-              <% @invoice.invoice_rows.each do |time| %>
+              <% @invoice.invoice_rows.each_with_index  do |time ,i| %>
                   <tr>
                     <td><%= time.username %></td>
                     <td><%= time.date.strftime("%A %b %d ") %></td>
                     <td><%= time.hours %></td>
                     <td><%= time.rate %></td>
+                    <td><%= @row_total[i] %></td>
                   </tr>
 
               <% end %>
               <td></td>
               <td></td>
-              <td>total  </td>
+              <td></td>
+              <td></td>
+              <td>total <%= @total %> </td>
 
               <tr>
               </tr>
