--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -134,23 +134,18 @@
             </div>
           </div>
         </div>
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off" %>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :rate, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :rate, class: "form-control" %>
+            </div>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "off" %>
-        </div>
 
         <div class="row">
           <div class="form-group">
